feat: skills작성 및 css 스타일 수정

--- a/study_1/index.html
+++ b/study_1/index.html
@@ -9,23 +9,54 @@
 </head>
 
 <body>
-    <header>
-        <!-- 간략 소개 -->
-        <h1>최지영의 자기소개 페이지</h1>
-        <p>안녕하세요. 프론트엔드 신입 개발자 최지영 입니다.</p>
-    </header>
-    <!-- 이름, 학교, 자격증, 연락처, github주소 등 -->
-    <section id="about">
-        <h2>About Me</h2>
-        <article>
-            <p><strong>이름</strong>최지영</p>
-            <p><strong>학교</strong>전주대학교 경영학과 (스마트미디어학과 복수전공)</p>
-            <p><strong>자격증</strong>2023.06 정보처리기사 취득</p>
-            <p><strong>연락처</strong>wlduddl4101@gmail.com</p>
-            <p><strong>github</strong>https://github.com/jizero1</p>
-            <p><strong>blog</strong>https://blog.naver.com/jibbbang2</p>
-        </article>
-    </section>
+    <div class="container">
+        <header class="header common-flex">
+            <!-- 간략 소개 -->
+            <h1>CHOI JIYOUNG</h1>
+            <p>안녕하세요. 프론트엔드 신입 개발자 최지영 입니다.</p>
+        </header>
+        <!-- about : 이름, 학교, 자격증, 연락처, github주소 등 -->
+        <section id="about">
+            <h2 class="title common-flex">About Me</h2>
+            <article class="about-container common-flex">
+                <img class="about-img" src="./image/aboutImg.jpg" alt="프로필이미지">
+                <div class="about-text">
+                    <p><strong>이름</strong>최지영</p>
+                    <p><strong>학교</strong>전주대학교 경영학과 (스마트미디어학과 복수전공)</p>
+                    <p><strong>자격증</strong>2023.06 정보처리기사 취득</p>
+                    <p><strong>연락처</strong>wlduddl4101@gmail.com</p>
+                    <p><strong>github</strong>https://github.com/jizero1</p>
+                    <p><strong>blog</strong>https://blog.naver.com/jibbbang2</p>
+                </div>
+            </article>
+        </section>
+        <!-- skills : 기술스택 나열-->
+        <section id="skills">
+            <h2 class="title common-flex">Skills</h2>
+            <article class="skills-container">
+                <div>
+                    <h3>Front-end</h3>
+                    <div class="skills-images">
+                        <img src="./image/html5.svg" alt="html5아이콘">
+                        <img src="./image/css3.svg" alt="css3아이콘">
+                        <img src="./image/js.svg" alt="js아이콘">
+                        <img src="./image/react.svg" alt="react아이콘">
+                    </div>
+                </div>
+
+                <ul class="common-flex">
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>React</li>
+                </ul>
+            </article>
+        </section>
+    </div>
+    <!-- footer -->
+    <footer id="footer">
+        <p>2025.05.22 최지영의 자기소개 페이지</p>
+    </footer>
 </body>
 
 </html>
