--- a/study_2/index.html
+++ b/study_2/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="style.css">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>최지영의 계산기</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
         <div class="calculator">
+            <!-- 계산 결과 표시  -->
             <div class="display">
                 <p>0</p>
             </div>
+            <!-- 계산기 버튼  -->
             <div class="button-grid">
                 <button>AC</button>
                 <button>+/-</button>
