--- a/study_3/clock/clock.html
+++ b/study_3/clock/clock.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>최지영의 시계</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="clock.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
