--- a/study_3/calculator/index.html
+++ b/study_3/calculator/index.html
@@ -6,35 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>최지영의 계산기</title>
     <link rel="stylesheet" href="calculator.css">
+    <script src="https://cdn.jsdelivr.net/npm/mathjs/lib/browser/math.js"></script>
+
 </head>
 
 <body>
     <main class="container common-flex">
         <div class="calculator">
             <div class="calculator__display">
-                <p id="calcluator__display-value">0</p>
+                <p id="display"></p>
             </div>
             <!-- 계산기 버튼  -->
             <div class="calculator__btn">
-                <button id="btnClearAll">AC</button>
-                <button id="btnClear">CE</button>
-                <button id="btnPercent">%</button>
-                <button id="btnDivide">/</button>
-                <button id="btn7">7</button>
-                <button id="btn8">8</button>
-                <button id="btn9">9</button>
-                <button id="btnMultiply">*</button>
-                <button id="btn4">4</button>
-                <button id="btn5">5</button>
-                <button id="btn6">6</button>
-                <button id="btnMinus">-</button>
-                <button id="btn1">1</button>
-                <button id="btn2">2</button>
-                <button id="btn3">3</button>
-                <button id="btnAdd">+</button>
-                <button id="btn0" class="claculator__btn-zero">0</button>
-                <button id="btnDot">.</button>
-                <button id="btnEqual">=</button>
+                <button data-type="operator" data-value="ac">AC</button>
+                <button data-type="operator" data-value="ce">CE</button>
+                <button data-type="operator" data-value="%">%</button>
+                <button data-type="operator" data-value="/">/</button>
+                <button data-type="number" data-value="7">7</button>
+                <button data-type="number" data-value="8">8</button>
+                <button data-type="number" data-value="9">9</button>
+                <button data-type="operator" data-value="*">*</button>
+                <button data-type="number" data-value="4">4</button>
+                <button data-type="number" data-value="5">5</button>
+                <button data-type="number" data-value="6">6</button>
+                <button data-type="operator" data-value="-">-</button>
+                <button data-type="number" data-value="1">1</button>
+                <button data-type="number" data-value="2">2</button>
+                <button data-type="number" data-value="3">3</button>
+                <button data-type="operator" data-value="+">+</button>
+                <button data-type="number" data-value="0" class="calculator__btn-zero">0</button>
+                <button data-type="operator" data-value=".">.</button>
+                <button data-type="operator" data-value="=">=</button>
+            </div>
+        </div>
+        <!-- 연산 기록 표시 -->
+        <div class="history common-flex">
+            <p class="history__header">[ 연산 기록 ]</p>
+            <div class="history__text">
             </div>
         </div>
     </main>
